<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/home"
        android:title="@string/home_button"
        android:icon="@drawable/baseline_home_24"/>
    <item
        android:id="@+id/search"
        android:title="@string/search_button"
        android:icon="@drawable/baseline_search_24"/>
    <item
        android:id="@+id/comment"
        android:title="@string/comment_menu_button"
        android:icon="@drawable/baseline_chat_bubble_24"/>
    <item
        android:id="@+id/notify"
        android:title="@string/notify_menu_button"
        android:icon="@drawable/baseline_notifications_none_24"/>
    <item
        android:id="@+id/profil"
        android:title="@string/profile_menu_button"
        android:icon="@drawable/baseline_person_24" />

</menu>