<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="20dp">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/main_color"
        app:cardCornerRadius="10dp">




            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="18dp"
                android:baselineAligned="false"
                android:orientation="horizontal"
                android:weightSum="2">


                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/iv_movie_image_fav"
                        android:layout_width="match_parent"
                        android:layout_height="150dp"
                        android:contentDescription="@string/movie_image"
                        android:scaleType="centerCrop"
                        app:srcCompat="@mipmap/ic_movie_image_vaiana_foreground"
                        tools:srcCompat="@mipmap/ic_movie_image_vaiana_foreground" />

                    <TextView
                        android:id="@+id/tv_movie_title_fav"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:breakStrategy="simple"
                        android:ellipsize="end"
                        android:maxLines="2"
                        android:text="@string/movie_title"
                        android:textColor="@color/white"
                        android:textSize="16sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/tv_release_date_fav"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/movie_release_date"
                        android:textColor="@color/white"
                        android:textSize="12sp" />

                    <TextView
                        android:id="@+id/tv_popularity_fav"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/movie_popularity"
                        android:textColor="@color/white" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/tv_overview_fav"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/movie_overview"
                        android:textAlignment="center"
                        android:textColor="@color/white" />

                    <TextView
                        android:id="@+id/tv_overview_text_fav"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="@string/movie_overview_text"
                        android:textColor="@color/white"
                        android:textSize="16sp" />
                </LinearLayout>
                <ImageView
                    android:id="@+id/imageView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/favoris"
                    app:srcCompat="@android:drawable/btn_star_big_on" />
            </LinearLayout>

    </androidx.cardview.widget.CardView>
</LinearLayout>